syntax = "proto3";

package payment.v1;

option go_package = "payment/v1;paymentpb";

import "google/api/annotations.proto";

message Response {
  string Msg = 1;
}

message ChargePaymentRequest {
  string pluginId = 1;

  message ChargeData {
    int64 Amount = 1;
    string ClientId = 2;
  }
  ChargeData data = 2;
}

message RefundPaymentRequest {
  string pluginId = 1;

  message RefundData {
    string paymentId = 1;
    int64 Amount = 2;
  }
  RefundData data = 2;
}

// Payment Interface Service
service PaymentService {
  rpc Charge(ChargePaymentRequest) returns (Response){
    option (google.api.http) = {
      post: "/v1/payment/charge"
      body: "*"
    };
  };

  rpc Refund(RefundPaymentRequest) returns (Response){
    option (google.api.http) = {
      post: "/v1/payment/refund"
      body: "*"
    };
  };
}
